JavaのバージョンをAWS環境に合わせて1.8に下げる